@@ -1,3 +1,8 @@
+Wed May 16 13:28:58 GMT 2012  Olly Betts <olly@survex.com>
+
+	* include/xapian/letor.h,letor.cc,letor_internal.cc,letor_internal.h:
+	  Use Xapian::doccount for msetsize.
+
 Wed May 16 12:50:55 GMT 2012  Olly Betts <olly@survex.com>
 
 	* letor_internal.cc: Prefer ++x to x++.
